--- a/src/components/common/dialog/DetailDialog.module.scss
+++ b/src/components/common/dialog/DetailDialog.module.scss
@@ -121,7 +121,7 @@
             .infoBox {
                 display: flex;
                 align-items: center;
-                justify-content: flex-start;
+                justify-content: center;
 
                 width: 100%;
 
@@ -141,23 +141,6 @@
                         color: main.$color-black-900;
                         font-weight: 600;
                     }
-                }
-            }
-            .tagBox {
-                display: flex;
-                align-items: center;
-                justify-content: flex-start;
-
-                width: 100%;
-
-                gap: 8px;
-
-                &__tag {
-                    padding: 4px 8px 6px 8px;
-
-                    border-radius: 4px;
-                    background-color: main.$color-gray-100;
-                    color: main.$color-gray-500;
                 }
             }
         }
