--- a/src/pages/bookmark/styles/index.module.scss
+++ b/src/pages/bookmark/styles/index.module.scss
@@ -13,7 +13,7 @@ $HEADER-HEIGHT: 56px;
         display: flex;
         flex-wrap: wrap;
         align-content: flex-start;
-        justify-content: center;
+        justify-content: flex-start;
 
         width: 100%;
         height: calc(100% - $HEADER-HEIGHT);
